# designPatterns

./: CMakeLists.txt  Observer.hpp  designPatternProj.cpp  designPatternProj.h
